--- a/PROJECT/nbproject/project.properties
+++ b/PROJECT/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=loginGUI.LoginGUI
+main.class=loginGUI.loginGUI
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
